--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -2,7 +2,7 @@ name: ci
 on:
   push:
     branches:
-      - "master"
+      - "main"
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -33,7 +33,7 @@ jobs:
           --metadata-file=text/000_metadata.md \
           --number-sections \
           --citeproc \
-          --output=report.pdf text/*.md
+          --output=output.pdf text/*.md
       - run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
       - name: Git Auto Commit
         uses: stefanzweifel/git-auto-commit-action@v4.16.0
